fix horizontal scroll at mobile sizes CLA-121

--- a/themes/nab-amplify/src/scss/modules/_session.scss
+++ b/themes/nab-amplify/src/scss/modules/_session.scss
@@ -8,7 +8,7 @@
 			border-top: 4px solid $color__purple;
 			border-image: linear-gradient(90deg, $color__pink, $color__purple) 4;
 			border-width: 0;
-			border-top-width: 4px
+			border-top-width: 4px;
 			background-color: $color__black;
 		}
 	}
